--- a/Examen_Final_WEB/Examen_Final_WEB/Views/contactoes/Details.cshtml
+++ b/Examen_Final_WEB/Examen_Final_WEB/Views/contactoes/Details.cshtml
@@ -45,6 +45,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Editar", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Ir Atrás", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.Id },  new { @class = "waves-effect waves-light btn-small" }) |
+    @Html.ActionLink("Ir Atrás", "Index", null,  new { @class = "waves-effect waves-light btn-small" })
 </p>
