--- a/Examen_Final_WEB/Examen_Final_WEB/Views/Shared/_Layout.cshtml
+++ b/Examen_Final_WEB/Examen_Final_WEB/Views/Shared/_Layout.cshtml
@@ -4,35 +4,44 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title- Centro Controlador</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+   
+
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Centro Controlador", "Index", "Visitas", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Visitas", "Index", "visitas")</li>
-                    <li>@Html.ActionLink("Contactos", "Index", "contactoes")</li>
-                </ul>
-            </div>
+    <nav>
+        <div class="nav-wrapper deep-purple lighten-1">
+            @Html.ActionLink("Centro Controlador", "Index", "visitas", null, new { @class = "brand-logo" })
+            <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+            <ul class="right hide-on-med-and-down">
+                <li>@Html.ActionLink("Visitas", "Index", "visitas")</li>
+                <li>@Html.ActionLink("Contactos", "Index", "contactoes")</li>
+            </ul>
         </div>
-    </div>
-    <div class="container body-content">
+    </nav>
+
+
+    <div>
         @RenderBody()
         <hr />
-        <footer>
-            <p>Carmen María Sánchez Tolentino - 2018-5862</p>
-        </footer>
+        <div style="padding-top:100px;">
+            <footer class="page-footer deep-purple lighten-1"style="position:fixed;bottom:0;left:0;width:100%;">
+                <div class="container">
+                 <p>Carmen María Sánchez Tolentino - 2018-5862</p>
+                   
+                </div>
+
+            </footer>
+     
     </div>
+       </div>
+   
+
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
