--- a/Examen_Final_WEB/Examen_Final_WEB/Views/contactoes/Create.cshtml
+++ b/Examen_Final_WEB/Examen_Final_WEB/Views/contactoes/Create.cshtml
@@ -55,7 +55,7 @@
 }
 
 <div>
-    @Html.ActionLink("Ir Atrás", "Index")
+    @Html.ActionLink("Ir Atrás", "Index", null,  new { @class = "waves-effect waves-light btn-small" })
 </div>
 
 @section Scripts {
