--- a/Examen_Final_WEB/Examen_Final_WEB/Views/contactoes/Delete.cshtml
+++ b/Examen_Final_WEB/Examen_Final_WEB/Views/contactoes/Delete.cshtml
@@ -50,7 +50,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Eliminar" class="btn btn-default" /> |
-            @Html.ActionLink("Ir Atrás", "Index")
+            @Html.ActionLink("Ir Atrás", "Index", null,  new { @class = "waves-effect waves-light btn-small" })
         </div>
     }
 </div>
