--- a/Examen_Final_WEB/Examen_Final_WEB/Views/visitas/Create.cshtml
+++ b/Examen_Final_WEB/Examen_Final_WEB/Views/visitas/Create.cshtml
@@ -58,21 +58,21 @@
         <div class="form-group">
             @Html.LabelFor(model => model.contactoRecibio, "contactoRecibio", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("contactoRecibio", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("contactoRecibio", null, htmlAttributes: new { @class = "btn-large btn dropdown-trigger deep-orange accent-1" })
                 @Html.ValidationMessageFor(model => model.contactoRecibio, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group" style=" padding-bottom:20px;">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Crear" class="btn btn-default" />
+                <input type="submit" value="Crear" class="btn btn-default"/>
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Ir Atrás", "Index")
+    @Html.ActionLink("Ir Atrás", "Index", null,  new { @class = "waves-effect waves-light btn-small" })
 </div>
 
 @section Scripts {
